--- a/api-productos/package.json
+++ b/api-productos/package.json
@@ -1,9 +1,9 @@
 {
   "name": "api-productos",
   "version": "1.0.0",
-  "dependencies": {
+  "dependencies": {    
     "aws-sdk": "^2.1392.0",
+    "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.0"
   }
-}
-
+} 
