--- a/api-compras/serverless.yml
+++ b/api-compras/serverless.yml
@@ -1,39 +1,37 @@
 org: sebastianchu
 service: api-compras
 
-frameworkVersion: "3"
-
 provider:
   name: aws
-  runtime: nodejs18.x
+  runtime: nodejs20.x
   region: us-east-1
-  stage: dev
-  environment:
-    JWT_SECRET: ${env:JWT_SECRET}
-    TABLA_COMPRAS: ComprasTable-${sls:stage}
+  timeout: 30
   iam:
-    role:
-      statements:
-        - Effect: Allow
-          Action:
-            - dynamodb:PutItem
-            - dynamodb:Query
-          Resource:
-            - arn:aws:dynamodb:${aws:region}:*:table/ComprasTable-${sls:stage}
+    role: arn:aws:iam::971808350791:role/LabRole
+  environment:
+    TABLE_NAME: ComprasTable-dev
+    JWT_SECRET: ${env:JWT_SECRET}
+
+package:
+  include:
+    - node_modules/**
+    - handler.js
+    - utils.js/**
 
 functions:
   comprar:
     handler: handler.comprar
     events:
       - http:
-          path: compras
+          path: /compras
           method: post
           cors: true
+
   obtenerCompras:
     handler: handler.obtenerCompras
     events:
       - http:
-          path: compras
+          path: /compras
           method: get
           cors: true
 
@@ -42,7 +40,8 @@ resources:
     ComprasTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: ComprasTable-${sls:stage}
+        TableName: ComprasTable-dev
+        BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: tenant_id
             AttributeType: S
@@ -53,7 +52,6 @@ resources:
             KeyType: HASH
           - AttributeName: id
             KeyType: RANGE
-        BillingMode: PAY_PER_REQUEST
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
 
