--- a/api-compras/serverless.yml
+++ b/api-compras/serverless.yml
@@ -6,10 +6,12 @@ provider:
   runtime: nodejs20.x
   region: us-east-1
   timeout: 30
+  stage: ${opt:stage, 'dev'}
   iam:
     role: arn:aws:iam::971808350791:role/LabRole
   environment:
-    TABLE_NAME: ComprasTable-dev
+    TABLE_COMPRAS_NAME: ComprasTable-${opt:stage, 'dev'}
+    TABLE_PRODUCTOS_NAME: ProductosTable-${opt:stage, 'dev'}
     JWT_SECRET: ${env:JWT_SECRET}
 
 package:
@@ -40,7 +42,7 @@ resources:
     ComprasTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: ComprasTable-dev
+        TableName: ComprasTable-${opt:stage, 'dev'}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: tenant_id
