--- a/api-compras/serverless.yml
+++ b/api-compras/serverless.yml
@@ -10,8 +10,8 @@ provider:
   iam:
     role: arn:aws:iam::971808350791:role/LabRole
   environment:
-    TABLE_COMPRAS_NAME: ComprasTable-${opt:stage, 'dev'}
-    TABLE_PRODUCTOS_NAME: ProductosTable-${opt:stage, 'dev'}
+    TABLE_NAME: ComprasTable-${self:provider.stage}
+    PRODUCTOS_TABLE_NAME: ProductosTable-${self:provider.stage}
     JWT_SECRET: ${env:JWT_SECRET}
 
 package:
@@ -42,7 +42,7 @@ resources:
     ComprasTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: ComprasTable-${opt:stage, 'dev'}
+        TableName: ComprasTable-${self:provider.stage}
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
           - AttributeName: tenant_id
