--- a/api-compras/package.json
+++ b/api-compras/package.json
@@ -5,6 +5,8 @@
     "aws-sdk": "^2.1392.0",
     "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "serverless-openapi-documentation": "^0.4.0"
   }
-} 
-
+}
