--- a/api-productos/package.json
+++ b/api-productos/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "dependencies": {    
     "aws-sdk": "^2.1392.0",
-    "axios": "^1.10.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "serverless-openapi-documentation": "^0.4.0"
   }
-} 
+}
