--- a/api-productos/package.json
+++ b/api-productos/package.json
@@ -4,9 +4,8 @@
   "dependencies": {    
     "aws-sdk": "^2.1392.0",
     "jsonwebtoken": "^9.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "serverless-openapi-documentation": "^0.4.0"
   }
 }
