--- a/api-compras/serverless.yml
+++ b/api-compras/serverless.yml
@@ -12,6 +12,7 @@ provider:
   environment:
     TABLE_NAME: ComprasTable-${self:provider.stage}
     PRODUCTOS_TABLE_NAME: ProductosTable-${self:provider.stage}
+    COMPRAS_BUCKET: compras-por-tenant-${self:provider.stage}
     JWT_SECRET: ${env:JWT_SECRET}
 
 package:
@@ -28,6 +29,7 @@ functions:
           path: compras
           method: post
           cors: true
+
   obtenerCompras:
     handler: handler.obtenerCompras
     events:
@@ -35,6 +37,7 @@ functions:
           path: compras
           method: get
           cors: true
+
   swaggerDocs:
     handler: handler.swaggerDocs
     events:
@@ -42,6 +45,16 @@ functions:
           path: docs/{proxy+}
           method: get
           cors: true
+
+  actualizarCompras:
+    handler: handler.actualizarCompras
+    events:
+      - stream:
+          type: dynamodb
+          arn:
+            Fn::GetAtt: [ComprasTable, StreamArn]
+          batchSize: 1
+          startingPosition: LATEST
 
 resources:
   Resources:
@@ -62,4 +75,9 @@ resources:
             KeyType: RANGE
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
+
+    ComprasS3Bucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: compras-por-tenant-${self:provider.stage}
 
