--- a/api-productos/serverless.yml
+++ b/api-productos/serverless.yml
@@ -15,9 +15,8 @@ provider:
 
 package:
   include:
-    - node_modules/**
     - handler.js
-    - utils.js/**
+    - utils/**
 
 functions:
   crearProducto:
