--- a/api-productos/package.json
+++ b/api-productos/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "aws-sdk": "^2.1392.0",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "serverless-http": "^3.2.0",
