--- a/api-compras/package.json
+++ b/api-compras/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "aws-sdk": "^2.1392.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "serverless-http": "^3.2.0",
